[gd_scene load_steps=5 format=3 uid="uid://hyue207c44lm"]

[ext_resource type="Shader" path="res://src/canvas/canvas.gdshader" id="1_toxy1"]
[ext_resource type="Script" path="res://src/canvas/canvas.gd" id="2_8c6kv"]
[ext_resource type="Script" path="res://src/canvas/mouse_grid.gd" id="4_kkcqr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tkjay"]
shader = ExtResource("1_toxy1")

[node name="Canvas" type="Node2D"]
material = SubResource("ShaderMaterial_tkjay")
script = ExtResource("2_8c6kv")

[node name="canvas-view" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size_2d_override_stretch = true

[node name="mouse_grid" type="Node2D" parent="."]
script = ExtResource("4_kkcqr")

[node name="CanvasSprite" type="Sprite2D" parent="mouse_grid"]

[node name="FileDialog_Save" type="FileDialog" parent="mouse_grid"]
initial_position = 1
size = Vector2i(452, 500)
access = 2

[node name="FileDialog_Open" type="FileDialog" parent="mouse_grid"]
title = "Open a File"
initial_position = 1
size = Vector2i(452, 500)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Export" type="Window" parent="mouse_grid"]
title = "Export Project"
initial_position = 1
size = Vector2i(400, 500)
visible = false
exclusive = true

[node name="VBoxContainer" type="VBoxContainer" parent="mouse_grid/Export"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -195.5
offset_right = 81.5
offset_bottom = 195.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CurrentCanSize" type="Control" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="Current" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="Space" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="ResizeCan" type="Control" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="Resize" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="LinkToggle" type="CheckBox" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Keep proportions"

[node name="x" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2
text = "x:"

[node name="xSpinBox" type="SpinBox" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 2000.0
value = 1.0

[node name="y" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2
text = "y:"

[node name="ySpinBox" type="SpinBox" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 2000.0
value = 1.0

[node name="Space2" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="New" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="Space3" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="DownloadAs" type="Control" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2

[node name="Download" type="Label" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2
text = "Download as:"

[node name="PNG" type="Button" parent="mouse_grid/Export/VBoxContainer"]
layout_mode = 2
text = "PNG"

[connection signal="file_selected" from="mouse_grid/FileDialog_Save" to="mouse_grid" method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="mouse_grid/FileDialog_Save" to="mouse_grid" method="_on_file_dialog_save_file_selected"]
[connection signal="file_selected" from="mouse_grid/FileDialog_Open" to="mouse_grid" method="_on_file_dialog_2_file_selected"]
[connection signal="file_selected" from="mouse_grid/FileDialog_Open" to="mouse_grid" method="_on_file_dialog_open_file_selected"]
[connection signal="close_requested" from="mouse_grid/Export" to="mouse_grid" method="_on_export_close_requested"]
[connection signal="toggled" from="mouse_grid/Export/VBoxContainer/LinkToggle" to="mouse_grid" method="_on_link_toggle_toggled"]
[connection signal="value_changed" from="mouse_grid/Export/VBoxContainer/xSpinBox" to="mouse_grid" method="_on_x_spin_box_value_changed"]
[connection signal="value_changed" from="mouse_grid/Export/VBoxContainer/ySpinBox" to="mouse_grid" method="_on_y_spin_box_value_changed"]
[connection signal="pressed" from="mouse_grid/Export/VBoxContainer/PNG" to="mouse_grid" method="_on_png_pressed"]
